# .dotfiles

./: .gitignore  .stow-local-ignore  bootstrap.sh  ssh-setup.sh
bat/.config/bat/: config
config/: .bash_profile  .bashrc
config/.config/bat/: config
config/.config/ghostty/: config
config/.config/git/: config  config.github  config.gitlab
config/.config/lsd/: colors.yaml
config/.config/nvim/: lazy-lock.json  lazyvim.json
config/.config/tmux/: tmux.conf
config/.config/ulauncher/: extensions.json  shortcuts.json
config/.config/yazi/: theme.toml
config/.config/zsh/: .zshenv  .zshrc
config/.ssh/: config
ghostty/.config/ghostty/: config
git/.config/git/: config
home/: .bash_profile  .bashrc  .gitconfig  .inputrc  .p10k.zsh  .tmux.conf  .zshenv  .zshrc
home/.code/: custom-vscode.css
home/.code/templates/cmake-project/: CMakeLists.txt  CMakePresets.json
home/.config/ghostty/: config
home/.config/ulauncher/: extensions.json  settings.json  shortcuts.json
home/.shellrc.d/common/: aliases.sh  utils.sh
home/.shellrc.d/zsh/: aliases.sh
home/.ssh/: config
home/.tmux/themes/: current-theme.conf  dark.conf  light.conf
lsd/.config/lsd/: colors.yaml
niri/: .face  .stow-local-ignore
niri/.config/fuzzel/: clipboard.ini  fuzzel.ini
niri/.config/hypr/: hypridle-desktop.conf  hypridle-laptop.conf  hyprlock-desktop.conf  hyprlock-laptop.conf  hyprlock.conf
niri/.config/mako/: config
niri/.config/niri/: binds.kdl  colors.kdl  (+6 more)
scripts/: toggle-dark-mode.sh  update-bitwarden.sh
setup/fedora/: gnome.conf  install.conf  setup.sh  utils.sh
(+109 files in other folders)
